app/www/style.css
/* Import Roboto font */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

* {
    font-family: 'Roboto', sans-serif;
}

.tab-pane .plotly {
    max-width: 1024px;
    margin-left: auto;
    margin-right: auto;
}

.navbar {
    margin-bottom: 0;
    padding-left: 10px;
}


.title {
    text-align: center;
    font-size: 5rem;
    font-weight: bold;
    max-width: 30em;
}

.title-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: auto;
    height: 500px;
    background-image: url('wilmington.png');
    background-origin: border-box;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.main-point-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    background-color: #f5f8ff;
    margin-bottom: 15rem;
    margin-top: 15rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 93rem;
    align-self: center;
    padding: 5rem;
    padding-top: 10rem;
    padding-bottom: 10rem;
}


.main-point {
    text-align: center;
    font-size: 3.5rem;
    margin-bottom: 2rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 24em;
}
.sub-point {
    text-align: center;
    font-size: 1.5rem;
    margin-top: 2rem;
    margin-bottom: 5rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 27em;
}

.main-heading-container {
    margin-bottom: 2rem;
}

.learn-more--container .main-point {
    max-width: 22em;
}

.main-point--icon {
    font-size: 8rem;
}

.main-point--footnote {
    text-align: center;
    color: gray;
    font-size: 2rem;
    margin-bottom: 6rem;
}

.explore-page-container { 
    display: flex;
}


.advoc-container {
    display: flex;
    text-align: center;
    justify-content: center;
    margin-top: 2rem;
}


.advoc-table {
    background-color: #f2f2f2;
    padding: 1rem;
    min-height: 35rem;
    margin-bottom: 1rem;
    text-align: center;
}

.map-container { 
    flex: 2;
    position: sticky;
    top: 0;
    align-self: flex-start;
    /* Special thanks: https://stackoverflow.com/a/44446672/6205282 */
}

/* when the window is small, stack the contents */
@media only screen and (max-width: 900px) {
  .explore-page-container {
      flex-direction: column; 
  }
  .map-container { 
    flex: 2;
    position: static;
    align-self: none!important
  }
}


.explore-contents-container {
    flex: 3;
    margin: 1rem;
}

.advoc-map {
    padding: 1rem;
    min-height: 35rem;
    margin-bottom: 1rem;
}

.advoc-table-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.explore-bar-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.bar-graph {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 5rem;
}

.table-footnote {
    color: gray;
    margin-top: 2.5rem;
}

.down-footnote {
    color: gray;
    margin-top: 0.5rem;
}

.comment {
    text-align: center;
    color: gray;
    font-size: 2rem;
    margin-top: 10rem;
    margin-bottom: 10rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 15em;
}

.select-county {
    display: flex;
    justify-content: center;
    align-items: center;
}

.center-container {
    display: flex;
    justify-content: center;
}

.take-action-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.take-action-card {
    padding: 3rem;
    margin: auto;
    max-width: 63rem;
    display: flex;
    background: #D7F5B5;
    flex-direction: column;
}

.take-action-card.blue {
    background: #CED7F5;
}

.call-to-action-text {
    text-align: center;
    font-size: 3rem;
    margin-left: auto;
    margin-right: auto;
    max-width: 15em;
}
.call-to-action-text-sub {
    margin-top: 2rem;
    font-size: 2rem;
    max-width: none;
}


.follow-campaign-list {
    text-align: left;
    font-size: 2rem;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto;
}
.follow-campaign-list li {
        margin-top: 1.5rem
}

.follow-housing-authorities-list {
    text-align: left;
    font-size: 2rem;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto; 
}
.follow-housing-authorities-list li {
    margin-top: 1.5rem;
}

.footer {
    background: rgb(248, 248, 248);;
    padding: 0.5rem;
    min-height: 10rem;
}

.footer-container {
    margin: 2rem;
}

.select-threshold {
    text-align: center;
    display: flex;
    align-items: center;
}

#prop_county {
    margin: auto;
    max-width: 800px;
}

.learn-more--container {
    background-image: url('wilmington-70pct.png');
    margin-top: 10rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: auto;
    height: 500px;
    background-origin: border-box;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


.learn-more-button {
    background-color: #ED8B00;
    border-radius: 10px;
    padding: 1rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    font-size: 2rem;
    color: white;
    cursor: pointer;
    margin: auto;
    margin-top: 4rem;
    margin-bottom: 8rem;
    max-width: 50rem;
}

.learn-more-button:hover {
    background-color: #cb7700;
    color: white;
}

.learn-more-button:active {
    background-color: #a96300;
    color: white;
    border: none;
}

.action-button:hover {
    color: white;
    text-decoration-line: none;
}

.action-button:active {
    color: white;
    text-decoration-line: none;
}

.action-button:focus {
    color: white;
    text-decoration-line: none;
}

.map-header-container {
    position: absolute;
    margin-top: 10px;
    z-index: 20;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 90%;
}

.address-input-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    z-index: 10;
    margin-left: 10px;
}

.address-message {
    background-color: #f1f1f1;
    opacity: 0.9;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 13px;
    padding-right: 13px;
    border-radius: 0 0 10px 10px;
    color: #8a8a8a;
    width: 100%;
}

.clear-all-button {
    z-index: 20;
}

.explore-title-container {
    margin: 5rem;
}


/* Change the select input look */
.select-county > .form-group.shiny-input-container > div .selectize-input.full, 
.select-threshold > .form-group.shiny-input-container > div .selectize-input.full {
    border: none;
    background-color: transparent;
    border-bottom-style: solid ;
    border-bottom-width: 1px;
    border-color: grey;
    border-radius: 0;
    text-align: left;
    margin-top: 5px;
}

.form-group {
    margin-bottom: 0!important;
}

.selectize-control {
    margin: 0;
}

.selectize-dropdown {
    text-align: left;
}

.plot-title {
    font-size: 2rem;
}

.select-county > .form-group,
.select-threshold > .form-group {
    margin-left: 1rem;
}

.bold {
    font-weight: bold;
}

.methods-container {
    max-width: 70rem;
    margin: auto;
}

#table_desc {
    min-height: 10rem;
    margin: auto;
}


/* Avoid wrapping the logo in the navbar */
.logo-container {
    position: absolute;
    top: 15px;
    right: 15px;
}

.logo-image {
    width: 9em;
}

